--- a/portfolio-front/src/app/modals/addjob/addjob.component.html
+++ b/portfolio-front/src/app/modals/addjob/addjob.component.html
@@ -12,6 +12,7 @@
             class="btn-close btn-close-white"
             data-bs-dismiss="modal"
             aria-label="Close"
+            (click)="clear()"
           ></button>
         </div>
         <!-- body -->
@@ -24,6 +25,10 @@
             aria-label="workplace"
             aria-describedby="workplace"
             formControlName="place"
+            [ngClass]="{
+              'border-danger': Place.errors && Place.touched,
+              'border-good': !Place.errors && Place.touched
+            }"
           />
         </div>
         <!-- logica dato -->
@@ -42,6 +47,10 @@
             aria-label="job-title"
             aria-describedby="job-title"
             formControlName="title"
+            [ngClass]="{
+              'border-danger': Title.errors && Title.touched,
+              'border-good': !Title.errors && Title.touched
+            }"
           />
         </div>
         <!-- logica dato -->
@@ -59,6 +68,10 @@
             class="form-control"
             aria-label="With textarea"
             formControlName="description"
+            [ngClass]="{
+              'border-danger': Description.errors && Description.touched,
+              'border-good': !Description.errors && Description.touched
+            }"
           ></textarea>
         </div>
         <!-- logica dato -->
@@ -79,6 +92,10 @@
             aria-label="job-start"
             aria-describedby="job-start"
             formControlName="start"
+            [ngClass]="{
+              'border-danger': Start.errors && Start.touched,
+              'border-good': !Start.errors && Start.touched
+            }"
           />
         </div>
         <!-- logica dato -->
@@ -98,6 +115,10 @@
             aria-label="job-end"
             aria-describedby="job-end"
             formControlName="end"
+            [ngClass]="{
+              'border-danger': End.errors && End.touched,
+              'border-good': !End.errors && End.touched
+            }"
           />
         </div>
         <!-- logica dato -->
@@ -115,6 +136,7 @@
             type="button"
             class="btn btn-secondary"
             data-bs-dismiss="modal"
+            (click)="clear()"
           >
             cerrar
           </button>
@@ -122,6 +144,7 @@
             type="submit"
             class="btn btn-primary"
             value="guardar cambios"
+            (click)="clear();refresh()"
           />
         </div>
       </div>
