--- a/portfolio-front/src/app/components/education/education.component.css
+++ b/portfolio-front/src/app/components/education/education.component.css
@@ -1,29 +1,42 @@
-.education{
+.education {
+  margin: 2%;
+}
+.course {
+  padding: 1rem;
+  display: flex;
+  flex-grow: 1;
+  flex-flow: wrap;
+  flex-direction: column;
+  flex-wrap: wrap;
+  transition: 1s;
+  justify-content: space-between;
+}
+.course:hover {
+  transform: scale(1.07);
+  border-bottom: solid;
+}
+.course h2 i {
+  border-top: solid;
+  border-left: solid;
+  border-color: var(--clr-light);
+  padding: 1rem;
+}
+h3 {
+  display: flex;
+  flex-grow: 1;
+  margin: 2%;
+}
 
-    padding: 1em;
-    margin: 2%;
-    display: flex;
-    flex-direction: column;
-  }
-  .institution{
-    color: #009188;
-  }
-  .course{
-    padding: 1em;
-    display: flex;
-    flex-grow: 1;
-    flex-direction: row;
-    transition: 2s;
-  }
-  .course:hover{
-    transform: scale(1.1);
-    border-bottom: solid;
-    justify-content: center;
-  }
-  
-  
-  .education h3,
-  .eduaction p{
-    padding: 2%;
-  
-  }
+.institution {
+  color: #009188;
+}
+
+.project__date {
+  margin-top: 2rem;
+}
+.date-buttons {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: right;
+}
