--- a/portfolio-front/src/app/components/experience/experience.component.html
+++ b/portfolio-front/src/app/components/experience/experience.component.html
@@ -15,34 +15,45 @@
   <div class="experience">
     <div class="job" *ngFor="let job of experience">
       <h3>
-        <span><i class="fa-solid fa-at icon-body"></i></span> {{ job.place }}
+        <i class="fa-solid fa-location-dot"></i><span> {{ job.place }} </span>
+        <br />
+        <span>&lt; {{ job.title }} &gt;</span>
       </h3>
-      <h4>{{ job.title }}</h4>
+      <div class="desc">
+        <p>{{ job.description }}</p>
 
-      <p>{{ job.description }}</p>
-      <p class="project__date">
-        {{ job.start | date : "dd-MM-yyy" }} /
-        {{ job.end | date : "dd-MM-yyy" }}
-      </p>
+        <div class="date">
+          <p class="project__date">
+            {{ job.start | date : "dd-MM-yyy" }} /
+            {{ job.end | date : "dd-MM-yyy" }}
+          </p>
+          <div class="col-1 admin-btn">
+            <!-- edit -modal trigger button -->
+            <button
+              type="button"
+              class="btn edit-btn btn-primary"
+              data-bs-toggle="modal"
+              data-bs-target="#editjob"
+            >
+              <i class="fa-solid fa-wand-magic-sparkles"></i>
+            </button>
+
+            <!--del- modal trigger button -->
+            <button
+              type="submit"
+              class="btn del-btn"
+              data-bs-toggle="modal"
+              data-bs-target="#delete"
+              (click)="delete(job.id)"
+            >
+              <i class="fa-solid fa-trash-can"></i>
+            </button>
+          </div>
+        </div>
+      </div>
 
       <!-- modal -->
-      <div class="col-1 admin-btn">
-        <!-- edit -modal trigger button -->
-        <button
-          type="button"
-          class="btn edit-btn btn-primary"
-          data-bs-toggle="modal"
-          data-bs-target="#editjob"
-        >
-          <i class="fa-solid fa-wand-magic-sparkles"></i>
-        </button>
 
-        <!--del- modal trigger button -->
-
-        <button type="button" class="btn del-btn">
-          <i class="fa-solid fa-trash-can"></i>
-        </button>
-      </div>
       <!-- ------- -->
     </div>
     <!-- ----------------- -->
