--- a/portfolio-front/src/app/components/footer/footer.component.html
+++ b/portfolio-front/src/app/components/footer/footer.component.html
@@ -1,6 +1,11 @@
-<section class="footer">
+<section  *ngFor="let person of people" class="footer" id="footer"> 
   <div class="license">
-    <h3>AGREGAR LICENCIA ETC</h3>
+
+    <h3> </h3>
+    <h3>
+      <p> &lt; <span> © </span> {{ person.license }}   &gt; </p>
+       
+    </h3>
   </div>
   <div>
     <h3>
@@ -10,3 +15,4 @@
     </h3>
   </div>
 </section>
+
