--- a/portfolio-front/src/app/components/projects/projects.component.html
+++ b/portfolio-front/src/app/components/projects/projects.component.html
@@ -24,7 +24,7 @@
         </h2>
 
         <!-- modal -->
-                  <!-- agregar *ngIf con funcion para cambiar visibilidad si esta logeado -->
+        <!-- agregar *ngIf con funcion para cambiar visibilidad si esta logeado -->
         <div class="col-1 admin-btn">
           <!-- edit -modal trigger button -->
           <button
@@ -33,18 +33,23 @@
             data-bs-toggle="modal"
             data-bs-target="#editproject"
           >
+            <!-- (click)="idEdit(project.id)" -->
+
             <i class="fa-solid fa-wand-magic-sparkles"></i>
           </button>
 
           <!--delete trigger button -->
           <!-- agregar *ngIf con funcion para cambiar visibilidad si esta logeado -->
 
-          
-          <button type="submit" class="btn del-btn" (click)="deleteProjectById(project.id)">
+          <button
+            type="submit"
+            class="btn del-btn"
+            data-bs-toggle="modal"
+            data-bs-target="#delete"
+            (click)="delete(project.id)"
+          >
             <i class="fa-solid fa-trash-can"></i>
           </button>
-
-
         </div>
         <!-- ------- -->
       </div>
@@ -69,3 +74,4 @@
 
 <app-editproject></app-editproject>
 <app-addproject></app-addproject>
+<app-delete></app-delete>
