--- a/portfolio-front/src/app/modals/addcourse/addcourse.component.html
+++ b/portfolio-front/src/app/modals/addcourse/addcourse.component.html
@@ -12,6 +12,7 @@
             class="btn-close btn-close-white"
             data-bs-dismiss="modal"
             aria-label="Close"
+            (click)="clear()"
           ></button>
         </div>
         <!-- body -->
@@ -24,6 +25,10 @@
             aria-label="course-title"
             aria-describedby="course-title"
             formControlName="title"
+            [ngClass]="{
+              'border-danger': Title.errors && Title.touched,
+              'border-good': !Title.errors && Title.touched
+            }"
           />
         </div>
         <!-- logica dato -->
@@ -42,6 +47,10 @@
             aria-label="course-institution"
             aria-describedby="course-institution"
             formControlName="institution"
+            [ngClass]="{
+              'border-danger': Institution.errors && Institution.touched,
+              'border-good': !Institution.errors && Institution.touched
+            }"
           />
         </div>
         <!-- logica dato -->
@@ -61,6 +70,10 @@
             aria-label="course-start"
             aria-describedby="course-start"
             formControlName="start"
+            [ngClass]="{
+              'border-danger': Start.errors && Start.touched,
+              'border-good': !Start.errors && Start.touched
+            }"
           />
         </div>
         <!-- logica dato -->
@@ -80,6 +93,10 @@
             aria-label="course-end"
             aria-describedby="course-end"
             formControlName="end"
+            [ngClass]="{
+              'border-danger': End.errors && End.touched,
+              'border-good': !End.errors && End.touched
+            }"
           />
         </div>
         <!-- logica dato -->
@@ -96,6 +113,7 @@
             type="button"
             class="btn btn-secondary"
             data-bs-dismiss="modal"
+            (click)="clear()"
           >
             cerrar
           </button>
@@ -103,6 +121,7 @@
             type="submit"
             class="btn btn-primary"
             value="guardar cambios"
+            (click)="clear(); refresh()"
           />
         </div>
       </div>
