--- a/portfolio-front/src/app/modals/addproject/addproject.component.html
+++ b/portfolio-front/src/app/modals/addproject/addproject.component.html
@@ -12,6 +12,7 @@
             class="btn-close btn-close-white"
             data-bs-dismiss="modal"
             aria-label="Close"
+            (click)="clear()"
           ></button>
         </div>
         <!-- body -->
@@ -24,6 +25,10 @@
             aria-label="project-url"
             aria-describedby="project-url"
             formControlName="url"
+            [ngClass]="{
+              'border-danger': Url.errors && Url.touched,
+              'border-good': !Url.errors && Url.touched
+            }"
           />
         </div>
         <!-- logica dato -->
@@ -42,6 +47,10 @@
             aria-label="project-title"
             aria-describedby="project-title"
             formControlName="title"
+            [ngClass]="{
+              'border-danger': Title.errors && Title.touched,
+              'border-good': !Title.errors && Title.touched
+            }"
           />
         </div>
         <!-- logica dato -->
@@ -61,6 +70,10 @@
             aria-label="project-start"
             aria-describedby="project-start"
             formControlName="start"
+            [ngClass]="{
+              'border-danger': Start.errors && Start.touched,
+              'border-good': !Start.errors && Start.touched
+            }"
           />
         </div>
         <!-- logica dato -->
@@ -82,6 +95,10 @@
             aria-label="project-end"
             aria-describedby="project-end"
             formControlName="end"
+            [ngClass]="{
+              'border-danger': End.errors && End.touched,
+              'border-good': !End.errors && End.touched
+            }"
           />
         </div>
         <!-- logica dato -->
@@ -112,6 +129,7 @@
             type="button"
             class="btn btn-secondary"
             data-bs-dismiss="modal"
+            (click)="clear()"
           >
             cerrar
           </button>
@@ -119,6 +137,7 @@
             type="submit"
             class="btn btn-primary"
             value="guardar cambios"
+            (click)="clear(); refresh()"
           />
         </div>
       </div>
