--- a/portfolio-front/src/app/modals/addskill/addskill.component.html
+++ b/portfolio-front/src/app/modals/addskill/addskill.component.html
@@ -12,6 +12,7 @@
             class="btn-close btn-close-white"
             data-bs-dismiss="modal"
             aria-label="Close"
+            (click)="clear()"
           ></button>
         </div>
         <!-- body -->
@@ -23,6 +24,10 @@
             aria-label="skill-name"
             aria-describedby="skill-name"
             formControlName="name"
+            [ngClass]="{
+              'border-danger': Name.errors && Name.touched,
+              'border-good': !Name.errors && Name.touched
+            }"
           />
         </div>
         <!-- logica dato -->
@@ -40,6 +45,10 @@
             aria-label="percentage number"
             placeholder="porcentaje de dominio de la habilidad"
             formControlName="percentage"
+            [ngClass]="{
+              'border-danger': Percentage.errors && Percentage.touched,
+              'border-good': !Percentage.errors && Percentage.touched
+            }"
           />
           <span class="input-group-text">%</span>
         </div>
@@ -62,6 +71,7 @@
             type="button"
             class="btn btn-secondary"
             data-bs-dismiss="modal"
+            (click)="clear()"
           >
             cerrar
           </button>
@@ -69,6 +79,7 @@
             type="submit"
             class="btn btn-primary"
             value="guardar cambios"
+            (click)="clear(); refresh()"
           />
         </div>
       </div>
