--- a/portfolio-front/src/app/modals/delete/delete.component.html
+++ b/portfolio-front/src/app/modals/delete/delete.component.html
@@ -13,12 +13,9 @@
           aria-label="Close"
         ></button>
       </div>
-      <div class="modal-body">&lt; ¿Desea eliminar esta sección? &gt;</div>
+      <div class="modal-body">&lt; datos actualizados &gt;</div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-          cerrar
-        </button>
-        <button type="submit" class="btn btn-primary">guardar cambios</button>
+        <button type="submit" class="btn btn-primary" (click)="refresh()" >&lt; recargar &gt;</button>
       </div>
     </div>
   </div>
