--- a/portfolio-front/src/app/modals/editskill/editskill.component.html
+++ b/portfolio-front/src/app/modals/editskill/editskill.component.html
@@ -23,6 +23,10 @@
             aria-label="skill-name"
             aria-describedby="skill-name"
             formControlName="name"
+            [ngClass]="{
+              'border-danger': Name.errors && Name.touched,
+              'border-good': !Name.errors && Name.touched
+            }"
           />
         </div>
         <!-- logica dato -->
@@ -40,6 +44,10 @@
             aria-label="percentage number"
             placeholder="porcentaje de dominio de la habilidad"
             formControlName="percentage"
+            [ngClass]="{
+              'border-danger': Percentage.errors && Percentage.touched,
+              'border-good': !Percentage.errors && Percentage.touched
+            }"
           />
           <span class="input-group-text">%</span>
         </div>
@@ -69,6 +77,7 @@
             type="submit"
             class="btn btn-primary"
             value="guardar cambios"
+            (click)="refresh()"
           />
         </div>
       </div>
